--- a/views/landingView.html
+++ b/views/landingView.html
@@ -54,6 +54,15 @@
 			<div id="window__aplicacion">
 				<h2 class="aplicacion__title">Aplicación SAyC</h2>
 			</div>
+
+			<div id="window__mapeo">
+				<img src="" alt="img">
+				<h2 class="mapeo__title">Mapeo Digital</h2>
+				<div id="container__description">
+					<h3 class="description">Mapeo de la escuela con los salones disponibles,sus capacidades y eventos en tiempo real.</h3>
+				</div>
+				<button class="btn mapa">Ver mapa</button>
+			</div>
 			
 		</div>
 
