--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -146,3 +146,23 @@ body {
 text-align: end;
 }
   
+.gridBox{
+    width: 100%;
+    height: 200px;
+    display: grid;
+    grid-template-columns: 15% 25% 20% auto;
+    grid-template-rows: auto auto auto;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    justify-items: stretch;
+    align-items: stretch;
+}
+.gridBox .caja1{
+    background-color: #E5EAD4;
+}
+.gridBox .caja2{
+    background-color: #9ACC77;
+}
+.gridBox .caja3{
+    background-color: #45936C;
+}
