--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -91,17 +91,39 @@ body {
     text-align: end;
 }
 
+#texto{
+    display: grid;
+    place-items: center;
+    width: 100%;
+}
+
+#texto h2{
+    margin: 0 auto;
+}
+
+#texto div{
+    display: grid;
+    place-items: center;
+    width: 100%;
+}
+
 #window__cronograma{
     background-color: #45936C;
     margin-bottom: 3.15rem;
     padding: 2rem;
+    display: flex;
 }
 
 #window__mapeo{
     background-color: #45936C;
     margin-bottom: 3.15rem;
     padding: 2rem;
+    display: flex;
 }
+
+/* #container__btn{
+    overflow: hidden;
+} */
 
 .btn{
     border: none;
@@ -146,3 +168,23 @@ body {
 text-align: end;
 }
   
+.gridBox{
+    width: 100%;
+    height: 200px;
+    display: grid;
+    grid-template-columns: 15% 25% 20% auto;
+    grid-template-rows: auto auto auto;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    justify-items: stretch;
+    align-items: stretch;
+}
+.gridBox .caja1{
+    background-color: #E5EAD4;
+}
+.gridBox .caja2{
+    background-color: #9ACC77;
+}
+.gridBox .caja3{
+    background-color: #45936C;
+}
